Added more unit tests
Extended ScanQueryRunnerTest to run with operators.
Fixed a few bugs and build issues.