@@ -59,7 +59,7 @@ public class ScanQueryTest
 
     ArrayList<HashMap<String, Object>> events1 = new ArrayList<>();
     HashMap<String, Object> event1 = new HashMap<>();
-    event1.put(ColumnHolder.TIME_COLUMN_NAME, new Long(42));
+    event1.put(ColumnHolder.TIME_COLUMN_NAME, Long.valueOf(42));
     events1.add(event1);
 
     s1 = new ScanResultValue(
@@ -70,7 +70,7 @@ public class ScanQueryTest
 
     ArrayList<HashMap<String, Object>> events2 = new ArrayList<>();
     HashMap<String, Object> event2 = new HashMap<>();
-    event2.put(ColumnHolder.TIME_COLUMN_NAME, new Long(43));
+    event2.put(ColumnHolder.TIME_COLUMN_NAME, Long.valueOf(43));
     events2.add(event2);
 
     s2 = new ScanResultValue(
@@ -304,7 +304,7 @@ public class ScanQueryTest
     ).flatMerge(seq -> seq, descendingOrderScan.getResultOrdering());
 
     // This should throw an ISE
-    List<ScanResultValue> res = borkedSequence.toList();
+    borkedSequence.toList();
   }
 
   @Test
